2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/21_Class_extendClassNonImpl.deca
// Description:
//    Programme : class qui extend une classe qui n'existe pas 
// Resultats:
//      Programme correcte syntaxiquement et faux contextuellement 
//
// Historique:
//    cree le 18/01/2024
class A extends B {
    boolean  f =false;
}